2026-02-10T02:06:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21848799919 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 218 285 / 220 287
* notice: next accum: outdated-unq outdated-all / unq all: 218 285 / 220 287
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-09T01:56:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21809727301 # 872
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-09
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: next accum: outdated-unq outdated-all / unq all: 218 285 / 220 287
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23] / []

2026-02-08T02:12:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790653660 # 871
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: next accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-07T01:45:45Z: